Cambios en los botones de alta

--- a/src/app/abc-atta/abc-atta.component.scss
+++ b/src/app/abc-atta/abc-atta.component.scss
@@ -124,14 +124,7 @@ color: #0e5375 !important;
      background-color: #0e5375 !important;
 
 }
-.mat-raised-button[ng-reflect-disabled=false] {
-     background-color: #2383b6;
-     color:white;
-     height: 40px;
-     border-radius: 4px;
-     background-color: #2383b6;
 
-}
 
 
 
@@ -153,7 +146,7 @@ color: #0e5375 !important;
      ::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple{
        background-color: #0e5375 !important;
      }
-     .mat-raised-button[ng-reflect-disabled=false] {
+     .mat-raised-button:not([disabled]) {
        background-color: #2383b6;
        color:white;
        height: 40px;
