--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -62,7 +62,7 @@
                                         
                                         
                                         
-                                        <a mat-raised-button class="login-extra" (click)="logginExtra()">logginExtra</a>
+                                        <!-- <a mat-raised-button class="login-extra" (click)="logginExtra()">logginExtra</a> -->
                                         
                                         <!-- <an-button [className]="'success'" type="submit">Log In</an-button> -->
 
