Cambios en el disenio de  altas, validacion

--- a/src/app/abc-atta-dash/abc-atta-dash.component.html
+++ b/src/app/abc-atta-dash/abc-atta-dash.component.html
@@ -27,7 +27,7 @@
                                                   </div>
                                                   <div class="cont-chips-prin" [ngClass]="{'first': isAllSelected() }">
                                                        
-                                                       <button mat-raised-button color="primary" class="login" routerLink="/abc-atta/createUser" >{{ 'abc-atta.crear-usuario' | translate}}</button>
+                                                       <button mat-raised-button color="primary" class="createrUser" routerLink="/abc-atta/createUser" >{{ 'abc-atta.crear-usuario' | translate}}</button>
                                                        <div class="cont-chips-button">
                                                             <button mat-button [matMenuTriggerFor]="menu"><mat-icon>filter_list</mat-icon>
                                                             </button>
