--- a/src/app/abc-atta-dash/abc-atta-dash.component.scss
+++ b/src/app/abc-atta-dash/abc-atta-dash.component.scss
@@ -436,7 +436,7 @@ mat-table {
                }
 
           }
-          .mat-raised-button {
+          .mat-raised-button.createrUser {
                background-color: #2383b6;
                color:white;
                height: 30px;
@@ -640,6 +640,6 @@ mat-table {
       
 
      }
-   }
+}
 
 
