--- a/src/app/abc-atta/abc-atta.component.scss
+++ b/src/app/abc-atta/abc-atta.component.scss
@@ -68,18 +68,31 @@
           }
      }
      .content{
-          padding: 40px;
-          .content-head{
-               display: flex;
-               .content-title{
-                    flex-basis: 70%;
-                    // outline: 1px solid blue;
-               }
-               .content-progress{
-                    flex-basis: 30%;
-                    // outline: 1px solid red;
+          position: relative;
+          height: 100%;
+          .content-principal{
+               background: white;
+               padding: 40px;
+               width: 1105px;
+               border-radius: 3px;
+               border:1px solid #c8afaf;
+               margin:0 auto;
+               margin-top:30px;
+               height: calc(100vh - 160px);
+               box-sizing: border-box;
+               .content-head{
+                    display: flex;
+                    .content-title{
+                         flex-basis: 70%;
+                         // outline: 1px solid blue;
+                    }
+                    .content-progress{
+                         flex-basis: 30%;
+                         // outline: 1px solid red;
+                    }
                }
           }
+
      }
 }
    
@@ -146,24 +159,39 @@ color: #0e5375 !important;
      ::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple{
        background-color: #0e5375 !important;
      }
-     .mat-raised-button:not([disabled]) {
-       background-color: #2383b6;
-       color:white;
-       height: 40px;
-       border-radius: 4px;
-       background-color: #2383b6;
-            width: 155px;
-          }
-          
-          ::ng-deep  .mat-raised-button.mat-primary{
-               background-color: #2383b6;
-               color:white;
-               height: 40px;
-               border-radius: 4px;
-               background-color: #2383b6;
-               width: 155px;
-               margin-left: 30px;
+     .mat-raised-button.abc-atta-invert:not([disabled]) {
+          color:#2383b6;
+          height: 30px;
+          border-radius: 4px;
+          background-color: white;
+          width: 75px;
+          border:1px solid #2383b6;
+          display: flex;
+          justify-content: center;
+          align-items: center;
      }
+    
+     ::ng-deep  .mat-raised-button.mat-primary.abc-atta-create[disabled]{
+          width: 75px;
+          margin-left: 30px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 30px;
+     }
+     ::ng-deep  .mat-raised-button.mat-primary.abc-atta-create:not([disabled]){
+          background-color: #2383b6;
+          color:white;
+          height: 30px;
+          border-radius: 4px;
+          background-color: #2383b6;
+          width: 75px;
+          margin-left: 30px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+     }
+     
 
 
 
@@ -208,7 +236,7 @@ color: #0e5375 !important;
      display: flex;
      width: 100%;
      justify-content: space-between;
-     padding-top: 50px;
+     padding-top: 20px;
      &.align-left{
           justify-content: flex-end;
           .cont-text{
@@ -249,8 +277,8 @@ color: #0e5375 !important;
           display: flex;
           justify-content: flex-end;
           button{
-               width: 115px;
-               height: 50px;
+               width: 75px;
+               height: 30px;
                &:nth-child(1){
                     margin-left: 30px;
                     margin-right: 30px;
@@ -294,9 +322,36 @@ padding: 1em;
 
 // change para fill appearance
 ::ng-deep .alta-form {
+     background: white;
      .mat-form-field .mat-form-field-flex{
           // background-color: rgba(0,0,0,.12);
-          background-color: rgba(0,0,0,.03);
+          background-color: white;
 
      }
    }
+
+
+.div-copyright{
+     // outline: 1px solid red;
+     position: absolute;
+     width: 1105px;
+     border-top: 1px solid #a8a8a8;
+     margin: 0 auto;
+     margin: 0 auto;
+     left: 0;
+     right: 0;
+     bottom: 0px;
+     p{
+          font-size: 10px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: 1.6;
+          letter-spacing: normal;
+          color: #999999;
+          padding-left: 15px;
+          padding-top: 15px;
+          padding-right: 15px;
+      
+     }
+}
