cambios es tabla

--- a/src/app/abc-atta-dash/abc-atta-dash.component.html
+++ b/src/app/abc-atta-dash/abc-atta-dash.component.html
@@ -94,19 +94,19 @@
 
 
                                              <ng-container matColumnDef="level">
-                                             <mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'abc-atta.title5-table' | translate }}  </mat-header-cell>
+                                             <mat-header-cell *matHeaderCellDef > {{ 'abc-atta.title5-table' | translate }}  </mat-header-cell>
                                              <mat-cell *matCellDef="let element" > {{element.username}} </mat-cell>
                                              </ng-container>
 
 
                                              <ng-container matColumnDef="name" >
-                                             <mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'abc-atta.title1-table' | translate }}  </mat-header-cell>
+                                             <mat-header-cell *matHeaderCellDef > {{ 'abc-atta.title1-table' | translate }}  </mat-header-cell>
                                              <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
                                              </ng-container>
 
 
                                              <ng-container matColumnDef="email">
-                                             <mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'abc-atta.title3-table' | translate }}  </mat-header-cell>
+                                             <mat-header-cell *matHeaderCellDef > {{ 'abc-atta.title3-table' | translate }}  </mat-header-cell>
                                              <mat-cell *matCellDef="let element"> {{element.unidadNegocio}} </mat-cell>
                                              </ng-container>
 
