--- a/src/app/abc-atta-dash/abc-atta-dash.component.scss
+++ b/src/app/abc-atta-dash/abc-atta-dash.component.scss
@@ -38,7 +38,7 @@
      bottom: 60px;
      left: 0;
      right: 0;
-     height: calc(100vh - 60px);
+     height: calc(100vh - 70px);
      
      .sidenav {
           padding-top: 40px;
@@ -121,7 +121,7 @@
                position: relative;
                flex: auto;
                min-width: 0;
-               width: 270px;
+               width: 400px;
                display: flex;
                justify-content: flex-start;
            }
@@ -643,3 +643,30 @@ mat-table {
 }
 
 
+.row-userCreated{
+     border-radius: 4px;
+     background-color: #cef3e0;
+     height: 40px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     position: relative;
+     p{
+          text-align: center;
+          font-size: 14px;
+          font-weight: 600;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: 1.71;
+          letter-spacing: normal;
+          color: #5e5e5e;
+          margin-bottom: 0px;
+     }
+     span{
+          position: absolute;
+          top: 10px;
+          right: 20px;
+          cursor: pointer;
+          
+     }
+}
