--- a/src/app/abc-atta/abc-atta.component.html
+++ b/src/app/abc-atta/abc-atta.component.html
@@ -28,6 +28,8 @@
                                                                  name="user"
                                                                  required
                                                                  formControlName="user"
+                                                                 maxlength="20"
+                                                                 onkeypress="return /[a-z.a-z]/i.test(event.key)"
                                                                  >
                                                             <mat-icon matSuffix *ngIf="firstFormGroup.controls.user.errors && firstFormGroup.controls.user.dirty " class="error-input"class="error-input" >error_outline</mat-icon>
                                                             <mat-hint  *ngIf="firstFormGroup.controls.user.errors && firstFormGroup.controls.user.dirty " class="error-input" >Introduce un User Id válido</mat-hint>
@@ -43,6 +45,7 @@
                                                             name="name"
                                                             required
                                                             formControlName="firstName"
+                                                            onkeypress="return /[a-z]/i.test(event.key)"
                                                             >
                                                        <mat-icon matSuffix 
                                                             *ngIf="firstFormGroup.controls.firstName.errors && firstFormGroup.controls.firstName.dirty " class="error-input" >error_outline</mat-icon>
@@ -59,6 +62,7 @@
                                                             name="apPaterno"
                                                             required
                                                             formControlName="apPaterno"
+                                                            onkeypress="return /[a-z]/i.test(event.key)"
                                                             >
                                                        <mat-icon matSuffix *ngIf="firstFormGroup.controls.apPaterno.errors && firstFormGroup.controls.apPaterno.dirty " class="error-input" >error_outline</mat-icon>
                                                        <mat-hint  *ngIf="firstFormGroup.controls.apPaterno.errors && firstFormGroup.controls.apPaterno.dirty " class="error-input" >Introduce un apellido válido</mat-hint>
@@ -78,6 +82,7 @@
                                                                  name="apMaterno"
                                                                  required
                                                                  formControlName="apMaterno"
+                                                                 onkeypress="return /[a-z]/i.test(event.key)"
                                                             >
                                                             <mat-icon matSuffix *ngIf="firstFormGroup.controls.apMaterno.errors && firstFormGroup.controls.apMaterno.dirty " class="error-input" >error_outline</mat-icon>
                                                             <mat-hint  *ngIf="firstFormGroup.controls.apMaterno.errors && firstFormGroup.controls.apMaterno.dirty " class="error-input" >Introduce un apellido válido</mat-hint>
@@ -96,6 +101,7 @@
                                                                  name="email"
                                                                  required
                                                                  formControlName="email"
+                                                                 maxlength="30"
                                                                  >
                                                             <mat-icon matSuffix *ngIf="firstFormGroup.controls.email.errors && firstFormGroup.controls.email.dirty " class="error-input" >error_outline</mat-icon>
                                                             <mat-hint  *ngIf="firstFormGroup.controls.email.errors && firstFormGroup.controls.email.dirty " class="error-input" >Introduce un email válido </mat-hint>
@@ -167,6 +173,8 @@
                                                                  name="user"
                                                                  required
                                                                  formControlName="user"
+                                                                 maxlength="20"
+                                                                 onkeypress="return /[a-z.a-z]/i.test(event.key)"
                                                                  >
                                                                  <mat-icon matSuffix *ngIf="firstFormGroup.controls.user.errors && firstFormGroup.controls.user.dirty " class="error-input"class="error-input" >error_outline</mat-icon>
                                                                  <mat-hint  *ngIf="firstFormGroup.controls.user.errors && firstFormGroup.controls.user.dirty " class="error-input" >Please enter a valid user id</mat-hint>
@@ -182,6 +190,8 @@
                                                                  name="name"
                                                                  required
                                                                  formControlName="firstName"
+                                                                 maxlength="10"
+                                                                 onkeypress="return /[a-z]/i.test(event.key)"
                                                                  >
                                                                  <mat-icon matSuffix 
                                                                            *ngIf="firstFormGroup.controls.firstName.errors && firstFormGroup.controls.firstName.dirty " class="error-input" >error_outline</mat-icon>
@@ -198,6 +208,8 @@
                                                                  name="last_name"
                                                                  required
                                                                  formControlName="lastName"
+                                                                 maxlength="10"
+                                                                 onkeypress="return /[a-z]/i.test(event.key)"
                                                             >
                                                             <mat-icon matSuffix *ngIf="firstFormGroup.controls.lastName.errors && firstFormGroup.controls.lastName.dirty " class="error-input" >error_outline</mat-icon>
                                                             <mat-hint  *ngIf="firstFormGroup.controls.lastName.errors && firstFormGroup.controls.lastName.dirty " class="error-input" >Please enter a valid Last Name </mat-hint>
@@ -215,6 +227,7 @@
                                                                       name="email"
                                                                       required
                                                                       formControlName="email"
+                                                                      maxlength="30"
                                                                       >
                                                                       <mat-icon matSuffix 
                                                                                      *ngIf="firstFormGroup.controls.email.errors && firstFormGroup.controls.email.dirty " class="error-input" >error_outline</mat-icon>
@@ -229,8 +242,11 @@
                                                                       placeholder="Enter phone number"
                                                                       name="number"
                                                                       required
-                                                                      type="number"
                                                                       formControlName="phone"
+                                                                      type="number" 
+                                                                      maxlength = "10"
+                                                                      (input)=maxLengthCheck($event)
+                                                                      
                                                                  >
                                                                  <mat-icon matSuffix 
                                                                  *ngIf="firstFormGroup.controls.phone.errors && firstFormGroup.controls.phone.dirty " class="error-input" >error_outline</mat-icon>
