--- a/src/app/abc-atta-dash/abc-atta-dash.component.scss
+++ b/src/app/abc-atta-dash/abc-atta-dash.component.scss
@@ -651,6 +651,12 @@ mat-table {
      justify-content: center;
      align-items: center;
      position: relative;
+     margin-left: 15px;
+     margin-right: 15px;
+     margin-right: 15px;
+     margin-bottom: 15px;
+     margin-top: 15px;
+
      p{
           text-align: center;
           font-size: 14px;
@@ -667,6 +673,8 @@ mat-table {
           top: 10px;
           right: 20px;
           cursor: pointer;
-          
+          mat-icon{
+               color: #5e5e5e;
+          }
      }
 }
